--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ https://templatemo.com/tm-531-reflux
               <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>Reflux Me</h4>
-              <span>Web Designer</span>
+              <h4>Muhammad Shaheer</h4>
+              <span>Game Developer</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
@@ -97,13 +97,9 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Reflux HTML CSS Template</h4>
+                  <h4>Muhammad Shaheer</h4>
                   <p>
-                    Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero.
+                    I am a Game Developer and a gamer who's sheer passion about games attracted him to be a Unity developer.
                   </p>
                   <div class="white-button">
                     <a href="#">Read More</a>
